native/monogame/include/api_structs.h

struct MGXR_Pose
{
    mgfloat PositionX;
    mgfloat PositionY;
    mgfloat PositionZ;
    mgfloat OrientationX;
    mgfloat OrientationY;
    mgfloat OrientationZ;
    mgfloat OrientationW;
};
struct MGXR_ViewProjection
{
    MGXR_Pose Pose;
    mgfloat FovAngleLeft;
    mgfloat FovAngleRight;
    mgfloat FovAngleUp;
    mgfloat FovAngleDown;
};